# antigravity

./: ._start_antigravity.command  ._sync_mac.command  .gitignore  0001-perf-fix-double-lineOffset-stale-cache-debounce-co.patch  Oops.rej  README.md  apply_css_class.py  center_snap.py  emergency_fix.py  finalize_cleanup.py  fix_alignment_debug.py  fix_editor.py  fix_mode_logic.py  fix_visuals_final.py  force_align.py  force_bg_unification.py  force_grid.py  force_restore_bg.py  force_strict_pixels.py  grammar_raw.xml  index.html  nexus_proof_rules.json  package-lock.json  package.json  query_db_real.py  replace_native_calls.py  repro_aozora.js  restore_debug_and_fix_visuals.py  scratch_test_processor.py  start_tauri.command  sync_mac.command  sync_windows.bat  uncommitted.patch
Tomarigi/: saezuri.xml
antigravity/: .textlintrc.js  0001-fix-7-Opus-review.patch  0002-perf-bulk-Worker-dispatch-rAF-batched-receive-420k.patch  cleanup_css_conflict.py  fix_editor_final.py  fix_passive_event.py  fix_visuals_v2.py  flip_gradients.py  force_index_scroll.py  force_padding.py  force_parity.py  force_snap.py  implement_repeating_grid.py  package-lock.json  package.json  perf_editor.jsx  start_antigravity.bat  start_antigravity.command  sync_windows.bat  test_hardwrap.js
antigravity/src-tauri/: Cargo.toml
antigravity/src-tauri/src/: main.rs
docs/: post_mortem_report.md  technical_report_for_opus.md
electron/: ._preload.cjs  atomicWrite.cjs  atomicWrite.test.cjs  journal.cjs  journal.test.cjs  main.cjs  preload.cjs
files 8/: 0001-perf.patch  App.jsx  Editor.jsx  (+2 more)
(+362 files in other folders)
